[project]
name = "quaxly"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.5",
    "alembic>=1.12.0",
    "discord-py==2.7.1",
    "geopandas>=1.0.0",
    "matplotlib==3.10.9",
    "psycopg2-binary>=2.9.12",
    "redis==8.0.0",
    "sqlalchemy>=2.0.50",
]
