[project]
name = "quaxly"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.14.0",
    "alembic>=1.12.0",
    "discord-py==2.7.1",
    "matplotlib==3.10.9",
    "psycopg2-binary>=2.9.12",
    "redis==8.0.0",
    "sqlalchemy>=2.0.50",
]
